# PgSQL-Load-Test

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: implementation-template.md
config/: example.yaml  fk_chain_example.yaml  run_fk_chain_30m.yaml  run_insert_30m.yaml  run_mixed_30m.yaml  run_read_30m.yaml
pgloadgen/: __init__.py  cli.py  config.py  metrics.py  runner.py
pgloadgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pgloadgen/workloads/: __init__.py  base.py  fk_chain_insert.py  mixed.py  partition_insert.py  read_query.py  sample_insert.py
tests/: test_config.py  test_metrics.py  test_workloads.py
