[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgloadgen"
version = "0.1.0"
description = "Async PostgreSQL load generator with modular workloads and latency metrics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
dependencies = [
  "asyncpg>=0.29.0",
  "click>=8.1.7",
  "PyYAML>=6.0.1",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "mypy>=1.10.0",
  "ruff>=0.5.0"
]

[project.scripts]
pgloadgen = "pgloadgen.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = ["pgloadgen"]
